--- a/ejs/src/views/products.ejs
+++ b/ejs/src/views/products.ejs
@@ -24,4 +24,4 @@
         <p>No hay datos para mostrar</p>
         <% } %> 
 
-        <p><a href="<%= '/newProduct' %>">Ir a formulario carga</a></p>
+        <p><a href="<%= '/' %>">Ir a formulario carga</a></p>
