--- a/pug/src/views/products.pug
+++ b/pug/src/views/products.pug
@@ -27,4 +27,4 @@ html
                                 img(class='imagen' src=producto.thumbnail)
             else
                 h2='No hay productos para mostrar'
-        a(href='/newProduct') !{'Ir a formulario carga'}
+        a(href='/') !{'Ir a formulario carga'}
