--- a/ejs/src/views/newProduct.ejs
+++ b/ejs/src/views/newProduct.ejs
@@ -11,13 +11,12 @@
 
 <script>
     let form = document.getElementById('productForm')
-    console.log(form)
     form.addEventListener('submit', e => {
         e.preventDefault()
         let data = new FormData(form)
         let obj = {}
         data.forEach((value, key) => obj[key] = value)
-        fetch('/newProduct', {
+        fetch('/productos', {
             method: 'POST',
             body: JSON.stringify(obj),
             headers: {
